chore: expose flux operator status page

--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -12,6 +12,8 @@ spec:
       namespace: observability
     - name: prometheus-operator-crds
       namespace: observability
+    - name: envoy-gateway
+      namespace: networking
   path: ./kubernetes/apps/flux-system/flux-operator/app
   prune: false
   sourceRef:
