chore: add flux operator in glance and gatus

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -70,6 +70,9 @@ pages:
               - title: Pi-hole
                 url: http://192.168.0.53/admin
                 icon: di:pi-hole.svg
+              - title: Flux
+                url: https://flux-operator.nasenov.dev
+                icon: di:flux-cd.svg
 
           - type: monitor
             title: Monitoring
