chore: enable postgres r2 backups

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -52,13 +52,13 @@ spec:
         repo1-retention-full: "30" # days
         repo1-retention-full-type: time
         # R2
-        # repo2-block: "y"
-        # repo2-bundle: "y"
-        # repo2-cipher-type: aes-256-cbc
-        # repo2-s3-uri-style: path
-        # repo2-path: /pgbackrest/database/postgres/repo2
-        # repo2-retention-full: "7" # days
-        # repo2-retention-full-type: time
+        repo2-block: "y"
+        repo2-bundle: "y"
+        repo2-cipher-type: aes-256-cbc
+        repo2-s3-uri-style: path
+        repo2-path: /pgbackrest/database/postgres/repo2
+        repo2-retention-full: "7" # days
+        repo2-retention-full-type: time
       manual:
         repoName: repo1
         options:
@@ -73,14 +73,14 @@ spec:
             full: "0 1 * * 0" # Sunday at 01:00
             differential: "0 1 * * 1-6" # Mon-Sat at 01:00
             incremental: "0 2-23 * * *" # Every hour except 01:00
-        # - name: repo2
-        #   s3:
-        #     bucket: postgres
-        #     endpoint: ${POSTGRESQL_R2_ENDPOINT}
-        #     region: auto
-        #   schedules:
-        #     full: "0 2 * * 0" # Sunday at 02:00
-        #     incremental: "0 2 * * 1-6" # Mon-Sat at 02:00
+        - name: repo2
+          s3:
+            bucket: postgres
+            endpoint: ${POSTGRESQL_R2_ENDPOINT}
+            region: auto
+          schedules:
+            full: "0 2 * * 0" # Sunday at 02:00
+            incremental: "0 2 * * 1-6" # Mon-Sat at 02:00
 
   dataSource:
     pgbackrest:
