chore: add media nfs to qui

--- a/kubernetes/apps/default/qui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qui/app/helmrelease.yaml
@@ -76,3 +76,10 @@ spec:
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
+      media:
+        type: nfs
+        server: truenas.nasenov.dev
+        path: /mnt/tank/media
+        globalMounts:
+          - path: /data/downloads
+            subPath: downloads
