--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -6,13 +6,9 @@ metadata:
   name: cilium
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: cilium
-      version: 1.18.6
-      sourceRef:
-        kind: HelmRepository
-        name: cilium
+  chartRef:
+    kind: OCIRepository
+    name: cilium
   valuesFrom:
     - kind: ConfigMap
       name: cilium-helm-values
