--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -13,4 +13,4 @@ rules:
   line-length: disable
 
   truthy:
-    allowed-values: ["true", "false", "on"]
+    allowed-values: ["true", "false", "on", "off"]
