--- a/docker/truenas/pihole/compose.yaml
+++ b/docker/truenas/pihole/compose.yaml
@@ -25,7 +25,7 @@ networks:
   pihole:
     driver: macvlan
     driver_opts:
-      parent: ens18
+      parent: enp4s0
     ipam:
       config:
         - subnet: 192.168.0.0/24
