--- a/kubernetes/apps/default/fusion/app/helmrelease.yaml
+++ b/kubernetes/apps/default/fusion/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
             env:
               TZ: Europe/Sofia
               PORT: &port 80
+              FUSION_ALLOW_EMPTY_PASSWORD: "true"
             probes:
               liveness: &probes
                 enabled: true
