--- a/kubernetes/apps/default/qui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qui/app/helmrelease.yaml
@@ -80,5 +80,4 @@ spec:
         server: truenas.nasenov.dev
         path: /mnt/tank/media
         globalMounts:
-          - path: /data/downloads
-            subPath: downloads
+          - path: /data
