--- a/kubernetes/apps/networking/certificates/import/externalsecret.yaml
+++ b/kubernetes/apps/networking/certificates/import/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         annotations:
           cert-manager.io/alt-names: "*.nasenov.dev,nasenov.dev"
           cert-manager.io/certificate-name: nasenov-dev
-          cert-manager.io/common-name: nasenov.dev
+          cert-manager.io/common-name: ""
           cert-manager.io/ip-sans: ""
           cert-manager.io/issuer-group: ""
           cert-manager.io/issuer-kind: ClusterIssuer
