chore: prometheus rules for failing flux ks and hr

--- a/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./httproute.yaml
   - ./ocirepository.yaml
   - ./podmonitor.yaml
+  - ./prometheusrule.yaml
   - ./receiver.yaml
 configMapGenerator:
   - name: flux-instance-helm-values
