--- a/kubernetes/apps/observability/smartctl-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/smartctl-exporter/app/helmrelease.yaml
@@ -14,3 +14,13 @@ spec:
 
     serviceMonitor:
       enabled: true
+      relabelings:
+        - action: labeldrop
+          regex: (pod)
+        - action: replace
+          regex: (.*);(.*)
+          replacement: $1.nasenov.dev:$2
+          sourceLabels:
+            - __meta_kubernetes_endpoint_node_name
+            - __meta_kubernetes_endpoint_port_number
+          targetLabel: instance
